[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/game/ui/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://src/game/ui/VBoxContainer.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Default-Big.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/Default-Medium.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0627451, 0.203922, 0.211765, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.490196, 0.419608, 0, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 2

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0, 0.298039, 0.639216, 0.25098 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.290196, 0.290196, 0.290196, 1 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.0
margin_top = -76.0
margin_right = 136.0
margin_bottom = 72.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 17.0
margin_right = -10.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Options"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -8.0
margin_right = -15.0
margin_bottom = 12.0

[node name="ControlsButton" type="Button" parent="Panel/VBoxContainer"]
margin_right = 240.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Controls"

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 27.0
margin_right = 240.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "BackÂ¿"

[node name="OptionsPanel" type="Panel" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -76.0
margin_right = 136.0
margin_bottom = 72.0
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="OptionsPanel"]
anchor_right = 1.0
margin_left = 10.0
margin_top = 17.0
margin_right = -10.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 3 )
text = "Controls"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="OptionsPanel"]
margin_left = 15.0
margin_top = 46.0
margin_right = 255.0
margin_bottom = 102.0

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel/ScrollContainer"]
grow_horizontal = 0
script = ExtResource( 2 )

[node name="BackOptionsButton" type="Button" parent="OptionsPanel"]
margin_left = 15.0
margin_top = 110.0
margin_right = 255.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Back"

[connection signal="pressed" from="Panel/VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="OptionsPanel/BackOptionsButton" to="." method="_on_BackOptionsButton_pressed"]
